@@ -12,11 +12,19 @@
 # This is the debhelper compatibility version to use.
 export DH_COMPAT=3
 
+# For Qt builds, build-dep: libqt3-compat-headers, libqt3-dev | libqt3-mt-dev
+#DESKTOP := Qt
+#GUI     := qt
+
+# For Gtk 2 builds, build-dep: libgtk2.0-dev
+DESKTOP := GTK2
+GUI     := gtk2
+
 DESTDIR   = $(CURDIR)/debian/roadmap
 BUILDFLAGS = \
   INSTALLDIR=/usr \
   desktopdir=/usr/share/applnk/Applications \
-  DESKTOP=QT
+  DESKTOP=$(DESKTOP)
 
 include /usr/share/dpatch/dpatch.make
 
@@ -75,7 +83,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/roadmap.
-	$(MAKE) -C src/qt $(BUILDFLAGS) DESTDIR=$(DESTDIR) pkgbindir=/usr/lib/roadmap install
+	$(MAKE) -C src/$(GUI) $(BUILDFLAGS) DESTDIR=$(DESTDIR) pkgbindir=/usr/lib/roadmap install
 
 	dh_movefiles --sourcedir=debian/roadmap
 
